--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@
   }
 
   .main-top {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/home_background.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/media/home_background.jpg');
     background-size: cover;
     background-position: center;
     padding: 15% 0rem;
