--- a/css/styles.css
+++ b/css/styles.css
@@ -1,95 +1,87 @@
 /* Base styling */
 * {
-    margin: 0;
-    font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    --main-color: #5D3BE8;
-    /* --light-color: #7bb0c4;
-    --dark-color: #362b48; */
-    --light-color: #ffff;
-    --dark-color: #362b48;
-  }
+  margin: 0;
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  --main-color: #5D3BE8;
+  /* --light-color: #7bb0c4;
+  --dark-color: #362b48; */
+  --light-color: #ffff;
+  --dark-color: #362b48;
+  --card-color: #53456a;
+  scroll-behavior: smooth;
+}
 
-  /* Sticky Navbar */
-  .navbar {
-    position: sticky;
-    top: 0;
-    background-color: #333;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-    font-size: 1.5rem;
-    background-color: var(--dark-color);
-    padding: 0.5rem 2rem;
-  }
+/* Sticky Navbar */
+.navbar {
+  position: sticky;
+  top: 0;
+  background-color: #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  font-size: 1.5rem;
+  background-color: var(--dark-color);
+  padding: 0.5rem 2rem;
+}
 
-  /* Title and links */
-  .navbar a, #main-download {
-    color: white;
-    text-decoration: none;
-    transition: 0.2s ease, transform 0.3s ease;
-    padding: 0.5rem 1rem;
-    border-radius: 2rem;
-    background-color: #46395b;
-  }
+/* Title and links */
+.navbar a, #main-download {
+  color: white;
+  text-decoration: none;
+  transition: 0.2s ease, transform 0.3s ease;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+  background-color: #46395b;
+}
 
-  .navbar a:hover, #download-ico:hover, #main-download:hover {
-    color: var(--dark-color);
-    background-color: var(--light-color);
-    border-radius: 0.5rem;
-  }
+.navbar a:hover, #download-ico:hover, #main-download:hover {
+  color: var(--dark-color);
+  background-color: var(--light-color);
+  border-radius: 0.5rem;
+}
 
-  #download-ico {
-    padding: 0;
-    background-color: var(--main-color);
-    justify-content: center;
-    align-items: center;
-  }
+#download-ico {
+  padding: 0;
+  background-color: var(--main-color);
+  justify-content: center;
+  align-items: center;
+}
 
-  #main-download {
-    display: inline;
-    padding: 1rem 2rem;
-    font-size: 2rem;
-    background-color: var(--main-color);
-  }
+#main-download {
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  background-color: var(--main-color);
+}
 
-  .navbar-title {
-    font-weight: bold;
-    font-size: 2rem;
-  }
+.navbar-title {
+  font-weight: bold;
+  font-size: 2rem;
+}
 
-  .navbar-links {
-    display: flex;
-    margin-left: 1rem;
-  }
+.navbar-links {
+  display: flex;
+  margin-left: 1rem;
+}
 
-  .navbar-links img {
-    height: 80%;
-    margin: 0;
-  }
+.navbar-links img {
+  height: 80%;
+  margin: 0;
+}
 
-  .main-top {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/home_background.jpg');
-    background-size: cover;
-    background-position: center;
-    padding: 5% 0rem;
+.card {
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: var(--card-color);
     color: #ffff;
-    text-align: center;
-  }
+    font-size: 1.5rem;
+    box-shadow: 0.2rem 0.4rem 0.4rem rgba(0, 0, 0, 0.2);
+    transition: 0.3s ease;
+}
 
-  .main-top h1 {
-    font-size: 7rem;
-    font-weight: bold;
-  }
-
-  .main-top #arr_down {
-    transition: 0.2s ease, transform 0.3s ease;
-    scroll-behavior: smooth;
-  }
-
-  .main-top #arr_down:hover {
-    transform: translateY(1);
-  }
+.card:hover {
+    box-shadow: 0.4rem 0.8rem 0.6rem rgba(0, 0, 0, 0.3);
+}
