--- a/css/downloadpage.css
+++ b/css/downloadpage.css
@@ -1,23 +1,53 @@
 main {
-    padding: 5rem;
+    padding: 2rem 5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 1rem;
+    align-items: center;
+    gap: 2rem;
+}
+
+h1, h2 {
+    font-weight: bold;
 }
 
 h1 {
     font-size: 5rem;
-    font-weight: bold;
-    margin-bottom: 5rem;
 }
 
 h2 {
     font-size: 3rem;
-    font-weight: bold;
-    margin-top: 5rem;
 }
 
 .download-half {
     flex: 1 1 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.download-half div {
+    margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: flex-start;
+}
+
+#Windows:not(:hover) {
+    background-color: #0078D7;
+}
+
+#MacOS:not(:hover) {
+    background-color: #555;
+}
+
+#Linux:not(:hover) {
+    background-color: #E95420;
+}
+
+footer {
+    position: absolute;
+    bottom: -5rem;
+    width: 100%;
 }
