--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -30,13 +30,14 @@
 
 #main-mid {
     margin-top: 5rem;
-    padding: 2rem;
+    padding: 5rem;
 }
 
 #main-mid article {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2.5rem;
+    align-items: center;
 }
 
 #main-mid h1 {
@@ -46,7 +47,7 @@
 }
 
 .main-mid-element {
-    flex: 1 1 20rem;
+    flex: 1 1 30rem;
     min-width: 0;
 }
 
