--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,12 @@ a {
     text-align: justify;
 }
 
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
 .card:hover {
     box-shadow: 0.4rem 0.8rem 0.6rem rgba(0, 0, 0, 0.3);
 }
