--- a/css/downloadpage.css
+++ b/css/downloadpage.css
@@ -34,6 +34,10 @@ h2 {
     align-items: flex-start;
 }
 
+h3 {
+    margin-top: 1rem;
+}
+
 #Windows:not(:hover) {
     background-color: #0078D7;
 }
