--- a/css/deliverablespage.css
+++ b/css/deliverablespage.css
@@ -46,9 +46,9 @@ ul {
     text-align: center;
 }
 
-img {
-    width: 100%;
-    height: 100%;
+.flex-deliverables-element img {
+    width: 70%;
+    height: 70%;
 }
 
 a {
