--- a/css/teampage.css
+++ b/css/teampage.css
@@ -5,7 +5,6 @@ section {
 article {
     display: flex;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
     align-items: stretch;
 }
@@ -32,8 +31,12 @@ article {
     margin: 0 auto;
 }
 
-.card h3 {
+.card h3:first-of-type {
     margin-top: 1rem;
+}
+
+.card h3:last-of-type {
+    margin-bottom: 1.2rem;
 }
 
 ul {
