--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -2,9 +2,11 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/home_background.jpg');
   background-size: cover;
   background-position: center;
-  padding: 5% 0rem;
+  padding: 2% 0rem;
   color: #ffff;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #main-top * {
@@ -71,4 +73,9 @@
 
 #main-low .arr_right {
   height: 4rem;
+}
+
+.main-download {
+  display: block;
+  width: fit-content;
 }
